--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "url": "https://github.com/spielrs/yew-parcel-template"
   },
   "name": "create-yew-parcel",
-  "version": "0.14.1",
+  "version": "0.14.2",
   "license": "Apache-2.0/MIT",
   "scripts": {
     "start": "parcel index.html",
@@ -16,6 +16,8 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-wasm.rs": "^1.2.15",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "minimist": "1.2.5",
+    "kind-of": "6.0.3"
   }
 }
